<resources>
    <string name="app_name">Just Java</string>
    <string name="action_settings">Settings</string>
    <string name="order_history">Order history</string>
    <string name="quant">Quantity</string>
    <string name="name_hint">Your name here</string>
    <string name="quantity_zero">0</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="order">Order</string>
    <string name="summary">Order Summary</string>
    <string name="top">Toppings</string>
    <string name="top1">Whipped Cream</string>
    <string name="top2">Chocolate</string>
    <string name="top3">Maple Syrup</string>
    <string name="prepare">"Thank you for your order! Preparing to email your order.."</string>
    <string name="order_sub">"JustJava order for "</string>
    <string name="company_email">orders@justjava.com</string>
    <string name="summary_name">"Name: "</string>
    <string name="order_id">"Order ID: "</string>
    <string name="summary_quantity">"Quantity: "</string>
    <string name="summary_toppings">"Toppings: "</string>
    <string name="summary_total">"Total: "</string>
    <string name="coffee_max">"Sorry, but everyone needs coffee :("</string>
    <string name="coffee_min">"Now you're going imaginary!!"</string>
    <string name="order_none">"Please order something :("</string>
    <string name="order_id_label">"Order ID :"</string>
    <string name="order_date_label">"Order date :"</string>
    <string name="order_name_label">"Name :"</string>
    <string name="order_quantity_label">"Quantity :"</string>
    <string name="order_toppings_label">"Toppings :"</string>
    <string name="order_total_label">"Total :"</string>
</resources>
