<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/order_button"
        android:layout_below="@+id/tool_bar">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/cust_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:hint="@string/name_hint"
                android:inputType="textCapWords"
                android:padding="16dp" />

            <TextView
                style="@style/HeaderTextStyle"
                android:text="@string/quant" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/minus"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="16dp"
                    android:onClick="decrement"
                    android:text="@string/decrement" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/quantity_zero"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="16dp"
                    android:onClick="increment"
                    android:text="@string/increment" />

            </LinearLayout>

            <TextView
                style="@style/HeaderTextStyle"
                android:text="@string/top" />

            <CheckBox
                android:id="@+id/checkbox1"
                style="@style/CheckBoxStyle"
                android:text="@string/top1" />

            <CheckBox
                android:id="@+id/checkbox2"
                style="@style/CheckBoxStyle"
                android:text="@string/top2" />

            <CheckBox
                android:id="@+id/checkbox3"
                style="@style/CheckBoxStyle"
                android:text="@string/top3" />


            <TextView
                android:id="@+id/summary"
                style="@style/HeaderTextStyle"
                android:text="@string/summary"
                android:visibility="gone" />

            <TextView
                android:id="@+id/summary_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:textColor="#000000"
                android:textSize="16sp"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/order_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/background_light"
        android:onClick="submitOrder"
        android:text="@string/order" />

</RelativeLayout>