<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="0.5sp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/order_id_label_view"
                style="@style/HistoryLabelTextViewStyle"
                android:text="@string/order_id_label" />

            <TextView
                android:id="@+id/order_id_view"
                style="@style/HistoryTextViewStyle"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/order_date_label_view"
                style="@style/HistoryLabelTextViewStyle"
                android:text="@string/order_date_label" />

            <TextView
                android:id="@+id/order_date_view"
                style="@style/HistoryTextViewStyle"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/order_name_label_view"
                style="@style/HistoryLabelTextViewStyle"
                android:text="@string/order_name_label" />

            <TextView
                android:id="@+id/order_name_view"
                style="@style/HistoryTextViewStyle"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/order_quantity_label_view"
                style="@style/HistoryLabelTextViewStyle"
                android:text="@string/order_quantity_label" />

            <TextView
                android:id="@+id/order_quantity_view"
                style="@style/HistoryTextViewStyle"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/order_toppings_label_view"
                style="@style/HistoryLabelTextViewStyle"
                android:text="@string/order_toppings_label" />

            <TextView
                android:id="@+id/order_toppings_view"
                style="@style/HistoryTextViewStyle"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/order_total_label_view"
                style="@style/HistoryLabelTextViewStyle"
                android:text="@string/order_total_label" />

            <TextView
                android:id="@+id/order_total_view"
                style="@style/HistoryTextViewStyle"
                android:layout_weight="1" />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>